<resources>
    <string name="app_name">test</string>
    <string name="text1">이제 당신의 과거를 지워보세요</string>
    <string name="text2">OK</string>
    <string name="text3">회원가입을 축하합니다</string>
    <string name="text4">User Name</string>
    <string name="text5">Email</string>
    <string name="text6">Confirm Password</string>
    <string name="text7">Password</string>
    <string name="text8">ID</string>
    <string name="text9">Team Eraser by JoongBu Univ</string>
    <string name="text10">Sign Up</string>
    <string name="text11">로그인시 이용가능</string>
    <string name="text12">Log In</string>
    <string name="text13">Settings</string>
    <string name="text14">무언가3</string>
    <string name="text15">무언가2</string>
    <string name="text16">무언가1</string>
    <string name="text17">My Page</string>
    <string name="text18">Log In</string>
    <string name="text19">Sign Up</string>
    <string name="text20">Team Eraser by JoongBu Univ</string>
    <string name="text21">PW</string>
    <string name="text22">ID</string>
    <string name="text23">Past Eraser</string>
    <string name="text24">Log In</string>
    <string name="text25">Sign Up</string>
    <string name="text26">이름이름 님 </string>
    <string name="text52">환영합니다</string>
    <string name="text27">Log out</string>
    <string name="text28">Settings</string>
    <string name="text29">무언가3</string>
    <string name="text30">무언가2</string>
    <string name="text31">무언가1</string>
    <string name="text32">My Page</string>
    <string name="text33">Press to erase your past After 30 days, there is no turning back</string>
    <string name="text34">Erasing</string>
    <string name="text35">Past Eraser</string>
    <string name="text36">Team Eraser by JoongBu Univ</string>
    <string name="text37">Team Eraser by JoongBu Univ</string>
    <string name="text38">Team Eraser by JoongBu Univ</string>
    <string name="text39">My Page</string>
    <string name="text40">도움말</string>
    <string name="text41">어플잠금</string>
    <string name="text42">삭제한 파일</string>
    <string name="text43">계정</string>
    <string name="text44">푸쉬알림</string>
    <string name="text45">개인정보 수정</string>
    <string name="text46">Please Log In to use the service &#10; If you are not a member, please to sign up</string>
    <string name="text47">Past Eraser</string>
    <string name="text48">Log In</string>
    <string name="text49">Sign Up</string>
    <string name="text50">Team Eraser by JoongBu Univ</string>
    <string name="text51">Team Eraser by JoongBu Univ</string>
</resources>