<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/artboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/artboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/image2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-48dp">

        <TextView
            android:id="@+id/text46"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp"
            android:layout_marginTop="145dp"
            android:gravity="center_horizontal|top"
            android:text="@string/text46"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal|top"
            android:text="@string/text47"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/draw77"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/draw77"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.369">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/login"
                android:background="#00ff0000"/>
            <TextView
                android:id="@+id/text48"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="39dp"
                android:layout_marginTop="4.3dp"
                android:gravity="center_horizontal|top"
                android:text="@string/text48"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.398"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/draw78"
            android:layout_width="fill_parent"
            android:layout_height="55dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="388dp"
            android:background="@drawable/draw78"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/sign_up"
                android:background="#00ff0000"/>

            <TextView
                android:id="@+id/text49"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="36.3dp"
                android:layout_marginTop="4.3dp"
                android:gravity="center_horizontal|top"
                android:text="@string/text49"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.398"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/draw80"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginTop="660dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/draw80"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|top"
                android:text="@string/text50"
                android:textColor="@color/colorBlue"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>